# console_piano

./: CMakeLists.txt  README.md
include/: note.hpp
src/: main.cpp
